syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Posts.Responses";

package sisa.blog.api;

// import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "sisa/libs/common/responses/paging_response.proto";

import "sisa/services/blog/v1/categories/responses.proto";
import "sisa/services/blog/v1/tags/responses.proto";
import "sisa/services/blog/v1/posts/enums.proto";

message PostResponse {
  string id = 1;
  string categoryId = 2;

  string title = 3;
  string slug = 4;
  string excerpt = 5;
  string content = 6;
  sisa.blog.api.PostStatus status = 7;

  sisa.blog.api.CategoryInfoResponse category = 8;
  repeated sisa.blog.api.TagResponse tags = 9;
}

message SinglePostResponse {
  PostResponse value = 1;
}

message ListPostsResponse {
  repeated PostResponse value = 1;
  sisa.common.PagingResponse paging = 2;
}
